# G-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp  README.md  todo.txt
Assets/: Default.vert  MainScene.scene
Dependencies/: CMakeLists.txt
Dependencies/glad/: CMakeLists.txt  README.md
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/glfw/: CMakeLists.txt
Dependencies/imgui/: CMakeLists.txt
Dependencies/stb/: README.md
Optimizations/: README.md
Source/: Main.cpp  Window.cpp  Window.h
Source/Core/: BufferObject.cpp  BufferObject.h  Data.cpp  Data.h  Object.cpp  Object.h
Source/Gameplay/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
Source/Geometry/: ElementBufferObject.cpp  ElementBufferObject.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexAttribute.cpp  VertexAttribute.h  VertexBufferObject.cpp  VertexBufferObject.h
Source/OpenGL/: BufferObject.h  ElementBufferObject.cpp  ElementBufferObject.h  FrameBufferObject.cpp  FrameBufferObject.h  Object.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
Source/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
Source/UI/: Hierarchy.cpp  Hierarchy.h  ImGUIFrame.cpp  ImGUIFrame.h  MenuBar.cpp  MenuBar.h  SceneUI.cpp  SceneUI.h  SceneUI_Assets.cpp  SceneUI_Assets.h  SceneUI_Hierarchy.cpp  SceneUI_Hierarchy.h  SceneUI_Inspector.cpp  SceneUI_Inspector.h  SceneUI_MenuBar.cpp  SceneUI_MenuBar.h  SceneUI_SceneView.cpp  SceneUI_SceneView.h  SceneUI_Stats.cpp  SceneUI_Stats.h  UIElement.h
Source/Utils/: Application.cpp  Application.h  EngineApplication.cpp  EngineApplication.h  GameBuilder.cpp  GameBuilder.h  ServiceLocator.cpp  ServiceLocator.h  Timer.cpp  Timer.h  UIRenderer.cpp  UIRenderer.h
